
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint32_t ;


 scalar_t__ volatile* MAP_FAILED ;
 int memcpy (scalar_t__*,void*,unsigned long) ;
 int physread16 (scalar_t__ volatile*,scalar_t__,scalar_t__*) ;
 int physwrite16 (scalar_t__ volatile*,scalar_t__,scalar_t__*) ;
 int puts (char*) ;
 scalar_t__ virt2phys (unsigned long) ;

void kernel_write(volatile uint32_t *m, unsigned long dest, unsigned long src, unsigned long len)
{
  uint32_t phys;
  unsigned long remaining, towrite, i;

  phys = virt2phys(dest);

  if (!m || m == MAP_FAILED)
    puts("not actually writing...");

  if (1) {
    remaining = len;
    for (i = 0; i < len; i += 16) {
      uint32_t buffer[4];
      if (remaining < 16)
        physread16(m, phys + i, (uint32_t*)buffer);
      towrite = remaining > 16 ? 16 : remaining;
      memcpy(buffer, (void*)(src + i), towrite);
      physwrite16(m, phys + i, (uint32_t*)buffer);
      remaining -= 16;
    }
  }
}
